--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -1,7 +1,11 @@
-.navigationPage .navbar {
+.navigationPageContainer .navbar {
   -webkit-box-shadow: 0px 13px 14px -11px rgba(0,0,0,0.39);
   -moz-box-shadow: 0px 13px 14px -11px rgba(0,0,0,0.39);
   box-shadow: 0px 13px 14px -11px rgba(0,0,0,0.39);
+}
+
+.navigationPageContainer .navbar-collapse ul li a {
+  cursor: pointer;
 }
 
 .navbar-logo {
@@ -21,7 +25,6 @@
   }
 }
 
-.navigationBody .navigationJumbotron {
-  }
-.navigationBody  .navigationSignIn {
-  }
+.dropdown-item {
+  cursor: pointer;
+}
